objects/MedProBT__SyncSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MedProBT__AllowedRecordTypes__c</fullName>
        <label>AllowedRecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Allowed_MedPro_Match_types__c</fullName>
        <label>Allowed MedPro Match types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__IncompleteBatchEmail__c</fullName>
        <inlineHelpText>Comma separated list of emails to receive batch incomplete email - leave blank for no email to be sent</inlineHelpText>
        <label>IncompleteBatchEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__KeepBlankAuditRecords__c</fullName>
        <defaultValue>true</defaultValue>
        <label>KeepBlankAuditRecords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__KeepUnchangedAuditRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KeepUnchangedAuditRecords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__MonthsToKeepAudits__c</fullName>
        <label>MonthsToKeepAudits</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__MonthsToKeepUMR__c</fullName>
        <defaultValue>12</defaultValue>
        <label>MonthsToKeepUMR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_of_Minutes_Before_Follow_Up_Call__c</fullName>
        <label>Number of Minutes Before Follow-Up Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MedPro SyncSettings</label>
</CustomObject>